# coastline

./: README.md  pyproject.toml
bytheseashore/: __init__.py  grid.py  io.py  plots.py  validation.py  workflow.py
coastline_analysis/: __init__.py  boxcount.py  grid.py  io.py  plots.py  raster.py  validation.py  workflow.py
docs/: mathematical_notes.md  singapore_case_study.md  validation_expectations.md
examples/: display_original_coastline.py  run_validation.py
examples/data/: .gitignore
