[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bytheseashore"
version = "0.1.0"
description = "Fractal analysis workflow for coastline geometries"
authors = [{ name = "Zeyu Yao", email = "26zeyuyaoy@sais.edu.sg" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.1.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "matplotlib>=3.10.0",
    "scipy>=1.16.0",
    "shapely>=2.1.0",
]

[project.optional-dependencies]
full = ["notebook"]

[tool.setuptools.packages.find]
where = ["."]
include = ["coastline_analysis*"]
